[package]
name = "rustedbytes-bytepusher-rombuilder"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
glob = "0.3.2"
rand = "0.9.1"
clap = { version = "4.5.40", features = ["derive"] }

[[bin]]
name = "rom-random"
path = "src/bin/rom-random.rs"

[[bin]]
name = "rom-imageconv"
path = "src/bin/rom-imageconv.rs"

[[bin]]
name = "rom-image-evy"
path = "src/bin/rom-image-evy.rs"

[[bin]]
name = "rom-video-catwalk"
path = "src/bin/rom-video-catwalk.rs"

[[bin]]
name = "rom-animated-noise"
path = "src/bin/rom-animated-noise.rs"
